schluesselmomente-cms/strapidb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
  name: strapidb
  namespace: schluesselmomente-cms
spec:
  replicas: 1
  selector:
    matchLabels:
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
      labels:
    spec:
      containers:
        - envFrom:
            - secretRef:
                name: schluesselmomente-strapi-app-secret
          image: postgres:16.0-alpine
          name: strapidb
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: strapi-data
      restartPolicy: Always
      volumes:
        - name: strapi-data
          persistentVolumeClaim:
            claimName: strapi-data
