schluesselmomente-cms/strapi-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
  name: strapi-postgres-service
  namespace: schluesselmomente-cms
spec:
  ports:
    - name: "5432"
      port: 5432
      targetPort: 5432
  selector:
