schluesselmomente-cms/strapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
  name: strapi-app-service
  namespace: schluesselmomente-cms
spec:
  ports:
    - name: "1337"
      port: 1337
      targetPort: 1337
  selector:
    io.kompose.service: schluesselmomente-strapi-app
