schluesselmomente-cms/strapi-ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: strapi-ingress
  namespace: schluesselmomente-cms
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: "admin.schluesselmomente-freiburg.de"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: strapi-app-service
                port:
                  number: 1337
    - host: "www.admin.schluesselmomente-freiburg.de"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: strapi-app-service
                port:
                  number: 1337
  tls:
  - hosts:
      - "admin.schluesselmomente-freiburg.de"
      - "www.admin.schluesselmomente-freiburg.de"
    secretName: schluesselmomente-cms-tls
